...
  @override
  Widget build(BuildContext context) {
    // TODO: implement build
    return Scaffold(
      appBar: AppBar(
        leading: ElevatedButton(onPressed: (){Navigator.pop(context);}, child: Icon(Icons.arrow_back_rounded)),
        title: Text("Detalle de la estación"),
      ),
      body: Padding(padding:  EdgeInsets.all(16),
        child: Column(
          children: [
          
          LastUpdated(),
...
